--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,23 @@
 Package: pmird
-Title: What the Package Does (One Line, Title Case)
+Title: Peat mid infrared spectra data compendium
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "First",
-           family = "Last",
+Authors@R:
+    person(given = "Henning",
+           family = "Teickner",
            role = c("aut", "cre"),
-           email = "first.last@example.com")
-Description: What the package does (one paragraph)
+           email = "henning.teickner@uni-muenster.de")
+Description: pmird is a data compendium for mid infrared spectra
+    of peat and its precursor materials. The aim is to provide
+    a comprehensive and easily to access collection of mid infrared
+    spectra under an open license.
 License: MIT + file LICENSE
 ByteCompile: true
 Encoding: UTF-8
 LazyData: true
+Imports: 
+    bookdown,
+    here
+Suggests: 
+    devtools,
+    git2r
+RoxygenNote: 7.1.0
