--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: pmird is a data compendium for mid infrared spectra
     of peat and its precursor materials. The aim is to provide
     a comprehensive and easily to access collection of mid infrared
     spectra under an open license.
-License: MIT + file LICENSE
+License: CC BY 4.0
 ByteCompile: true
 Encoding: UTF-8
 LazyData: true
@@ -19,5 +19,11 @@ Imports:
     here
 Suggests: 
     devtools,
-    git2r
+    git2r,
+    knitr,
+    rmarkdown,
+    dplyr
 RoxygenNote: 7.1.0
+URL: https://github.com/henningte/pmird
+BugReports: https://github.com/henningte/pmird/issues
+VignetteBuilder: knitr
