--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -7,5 +7,8 @@ articles:
   a03-How-to-contribute: a03-How-to-contribute.html
   a04-Data-dictionary: a04-Data-dictionary.html
   a05-How-to-access-data: a05-How-to-access-data.html
-last_built: 2020-06-13T10:42Z
+last_built: 2020-06-13T12:10Z
+urls:
+  reference: https://henningte.github.io/pmird//reference
+  article: https://henningte.github.io/pmird//articles
 
