Update the package: * Clean code * Clean package data * Update README

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,8 +1,32 @@
+^renv$
+^renv\.lock$
 ^pmird\.Rproj$
 ^\.Rproj\.user$
 ^LICENSE\.md$
 ^README\.Rmd$
+^README\.md$
 ^README-.*\.png$
 ^CONDUCT\.md$
 ^CONTRIBUTING\.md$
 analysis
+^vignettes/articles$
+^\./data_template$
+^Dockerfile$
+^data-raw$
+^pkgdown$
+^_pkgdown.yaml$
+^pmird_icon\.svg$
+^notes$
+^data_template$
+^data_template\.zip$
+^docs$
+^inst/extdata/mir_quality_results\.rds$
+^inst/extdata/attributes\.csv
+^inst/extdata/samples_attributes\.csv
+^inst/extdata/pmird_licenses\.csv
+^inst/extdata/mir_metadata_attributes\.csv
+^inst/extdata/macrofossils_attributes\.csv
+^inst/extdata/macrofossil_types_attributes\.csv
+^inst/extdata/data_attributes\.csv
+^inst/extdata/custom_eml_unittypes\.csv
+^inst/extdata/custom_eml_units\.csv
