--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,29 +1,62 @@
 Package: pmird
-Title: Peat mid infrared spectra data compendium
+Title: R interface to the peatland mid infrared spectra database
 Version: 0.0.0.9000
 Authors@R:
-    person(given = "Henning",
-           family = "Teickner",
-           role = c("aut", "cre"),
-           email = "henning.teickner@uni-muenster.de")
-Description: pmird is a data compendium for mid infrared spectra
-    of peat and its precursor materials. The aim is to provide
-    a comprehensive and easily to access collection of mid infrared
-    spectra under an open license.
+    person(
+        given = "Henning",
+        family = "Teickner",
+        role = c("aut", "cre"),
+        email = "henning.teickner@uni-muenster.de",
+        comment = "0000-0002-3993-1182"
+    )
+Description: The 'pmird' package provides functions to interact with the 
+    'pmird' database. The 'pmird' database stores mid infrared spectra of peat, 
+    peat forming vegetation and dissolved organic matter along with metadata on 
+    samples and additional data (e.g., elemental contents).
 License: CC BY 4.0
 ByteCompile: true
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    bookdown,
-    here
+    rlang (>= 0.4.12),
+    dm (>= 0.1.4),
+    purrr (>= 0.3.4),
+    tibble (>= 3.0.1),
+    magrittr (>= 1.5),
+    stringr (>= 1.4.0),
+    tidyr (>= 1.1.0)
 Suggests: 
+    here,
+    bookdown,
+    dbplyr (>= 1.4.4),
+    uuid (>= 0.1-4),
+    EML (>= 2.0.5),
+    foreach (>= 1.5.0),
+    hexView (>= 0.3-4),
     devtools,
-    git2r,
+    git2r (>= 0.27.1),
     knitr,
     rmarkdown,
-    dplyr
+    dplyr,
+    pkgdown,
+    kableExtra,
+    bib2df (>= 1.1.1),
+    readxl (>= 1.3.1),
+    sp (>= 1.4.2),
+    sf (>= 0.9-4),
+    quantities(>= 0.1.5),
+    redoxpeat (>= 0.0.0.9002),
+    elco (>= 0.0.0.9000),
+    pangaear (>= 1.1.0),
+    readODS (>= 1.6.7),
+    simplerspec (>= 0.1.0.9001),
+    tabulizer (>= 0.2.2),
+    ir (>= 0.2.0.9000),
+    data.table (>= 1.12.8),
+    RMariaDB (>= 1.0.8)
 RoxygenNote: 7.1.0
 URL: https://github.com/henningte/pmird
 BugReports: https://github.com/henningte/pmird/issues
 VignetteBuilder: knitr
+Depends: 
+    R (>= 4.0.0)
